# Social-Media-App

./: .replit  README.md  db.sqlite3  pyproject.toml  requirements.txt  whatsleft.txt
backend/: settings.py  urls.py
core/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
core/templates/: base.html  footer.html  frontpage.html  login.html  profile.html  search.html  signup.html  updateprofile.html
core/templates/partials/: posts_list.html
media/uploads/posts/: FHTWEffaIAE1BYf.jfif  emiruwicked.jfif
static/: style.css
staticfiles/: staticfiles.json  style.6adb27119f99.css  style.90635db05348.css  style.css  style.e515ba653a34.css  style.e8b13de916d5.css
